# aicli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  settings.json  tasks.py  tools.json
.github/workflows/: ci.yml  test.yml
claude/: CLAUDE.md  settings.json
claude/skills/: create-pr.md  make-commits.md  update-pr.md
gemini/: GEMINI.md  settings.json
gemini/commands/: create-pr.toml  make-commits.toml  update-pr.toml
memory/: README.md  base.md  project-notes-workflow.md  python.md
modules/claude/: settings.template.json
modules/claude/hooks/: set-terminal-title.sh
modules/claude/skills/: create-pr.md  make-commits.md  update-pr.md
modules/gemini/commands/: README.toml  create-pr.toml  make-commits.toml  update-pr.toml
modules/opencode/: opencode.json
opencode/: AGENTS.md
opencode/command/: create-pr.md  make-commits.md
scripts/: bootstrap  cli.py  setup.py  setup.sh  sync_skills.py
shared/memory/: base.md
skills/: README.md  create-pr.md  make-commits.md  update-pr.md
skills/create-pr/: SKILL.md
templates/: backend-review.md  frontend-review.md
tests/: conftest.py  test_memory.py  test_setup.py  test_skills.py  test_tools_config.py
