[project]
name = "aicli"
version = "0.1.0"
description = "Unified configuration for AI CLI tools"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
help = "scripts.cli:main"
setup = "scripts.setup:main"
claude-to-gemini = "scripts.sync_skills:claude_to_gemini"
gemini-to-claude = "scripts.sync_skills:gemini_to_claude"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = []

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
