[project]
name = "aicli"
version = "0.1.0"
description = "Unified configuration for AI CLI tools"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
help = "scripts.cli:main"
setup = "scripts.setup:main"

[dependency-groups]
dev = [
    "invoke>=2.2",
    "pytest>=8.0",
    "ruff>=0.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
